--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,10 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^6.1.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   image_picker: ^1.0.5
+  provider: ^6.1.1
   shared_preferences: ^2.2.2
 
 dev_dependencies:
