--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,12 @@ dependencies:
   firebase_storage: ^11.5.6
   flutter:
     sdk: flutter
+  flutter_speed_dial: ^7.0.0
   google_fonts: ^6.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   image_picker: ^1.0.5
+  intl: ^0.19.0
   provider: ^6.1.1
   shared_preferences: ^2.2.2
 
