--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,12 @@ dependencies:
   cloud_firestore: ^4.13.6
   convex_bottom_bar: ^3.2.0
   cupertino_icons: ^1.0.2
-  firebase_auth: ^4.15.2
+  firebase_auth: ^4.16.0
   firebase_core: ^2.24.2
   firebase_storage: ^11.5.6
   flutter:
     sdk: flutter
+  flutter_colorpicker: ^1.0.3
   flutter_speed_dial: ^7.0.0
   google_fonts: ^6.1.0
   hive: ^2.2.3
