--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^4.16.0
   firebase_core: ^2.24.2
   firebase_storage: ^11.5.6
+  fl_chart: ^0.66.1
   flutter:
     sdk: flutter
   flutter_colorpicker: ^1.0.3
