--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,13 +37,20 @@ dependencies:
   fl_chart: ^0.66.1
   flutter:
     sdk: flutter
-  flutter_colorpicker: ^1.0.3
+  flutter_charts: ^0.5.2
+  flutter_launcher_icons: ^0.13.1
   flutter_speed_dial: ^7.0.0
   google_fonts: ^6.1.0
+  intl: ^0.19.0
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "lib/images/logo.png"
+  flutter_speed_dial: ^7.0.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   image_picker: ^1.0.5
-  intl: ^0.19.0
   provider: ^6.1.1
   shared_preferences: ^2.2.2
 
