--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_speed_dial: ^7.0.0
   google_fonts: ^6.1.0
   intl: ^0.19.0
+  shared_preferences: ^2.2.2
 
 flutter_launcher_icons:
   android: "launcher_icon"
