--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_speed_dial: ^7.0.0
   google_fonts: ^6.1.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   intl: ^0.19.0
   shared_preferences: ^2.2.2
 
@@ -59,6 +61,7 @@ flutter_launcher_icons:
 
 dev_dependencies:
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.8
   flutter_test:
     sdk: flutter
 
