--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,8 +60,9 @@ flutter_launcher_icons:
   shared_preferences: ^2.2.2
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
   build_runner: ^2.4.8
+  hive_generator: ^2.0.1
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
 
